# cf-python-client

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  dev-requirements.txt  poetry.toml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: pythonapp.yml  pythonpackage.yml
cloudfoundry_client/: __init__.py  client.py  common_objects.py  errors.py
cloudfoundry_client/doppler/: client.py  websocket_envelope_reader.py
cloudfoundry_client/dropsonde/: __init__.py  envelope_pb2.py  error_pb2.py  http_pb2.py  log_pb2.py  metric_pb2.py  uuid_pb2.py
cloudfoundry_client/main/: apps_command_domain.py  command_domain.py  main.py  operation_commands.py  tasks_command_domain.py
cloudfoundry_client/networking/: entities.py
cloudfoundry_client/rlpgateway/: client.py
cloudfoundry_client/v2/: apps.py  buildpacks.py  entities.py  events.py  jobs.py  resources.py  routes.py  service_bindings.py  service_brokers.py  service_instances.py  service_keys.py  service_plan_visibilities.py  service_plans.py  spaces.py
cloudfoundry_client/v3/: apps.py  audit_events.py  buildpacks.py  domains.py  droplets.py  entities.py  feature_flags.py  isolation_segments.py  jobs.py  organization_quotas.py  organizations.py  packages.py  processes.py  roles.py  routes.py  security_groups.py  service_brokers.py  service_credential_bindings.py  service_instances.py  service_offerings.py  service_plans.py  spaces.py  stacks.py  tasks.py  users.py
integration/: config_test.py  imported.py  test_applications.py  test_buildpacks.py  test_navigation.py  test_organizations.py  test_routes.py  test_service_bindings.py  test_service_brokers.py  test_service_instances.py  test_service_keys.py  test_service_plans.py  test_services.py  test_spaces.py
integration/python/: config_test.py  test_applications.py  test_buildpacks.py  test_navigation.py  test_organizations.py  test_routes.py  test_service_brokers.py  test_service_instances.py  test_service_keys.py  test_service_plans.py  test_services.py  test_spaces.py
integration/v2/: test_applications.py  test_buildpacks.py  test_loggregator.py  test_navigation.py  test_organizations.py  test_service_bindings.py  test_service_keys.py  test_service_plans.py  test_services.py
integration/v3/: test_service_brokers.py  test_service_instances.py  test_service_plans.py
main/cloudfoundry_client/: __init__.py  client.py  entities.py  errors.py  imported.py  json_object.py  main.py  request_object.py
src/cloudfoundry/: __init__.py  applications.py  calls.py  client.py  credentials.py  entities.py  main.py  organizations.py  services.py  spaces.py
src/cloudfoundry_client/: __init__.py  applications.py  calls.py  client.py  credentials.py  entities.py  main.py  organizations.py  services.py  spaces.py
test/: abstract_test_case.py  config_test.py  fake_requests.py  imported.py  requirements.txt  test.tmpl.properties  test_all.py  test_applications.py  test_applications_start_stop.py  test_apps.py  test_buildpacks.py  test_client.py  test_entities.py  test_loggregator.py  test_manifest_reader.py  test_organizations.py  test_request_object.py  test_routes.py  test_service_bindings.py  test_service_brokers.py  test_service_instances.py  test_service_keys.py  test_service_plans.py  test_services.py  test_spaces.py
test/python/: __init__.py  abstract_test_case.py  (+16 more)
tests/: __init__.py  abstract_test_case.py  fake_requests.py  test_client.py
(+329 files in other folders)
